--- a/api/pug/base/createElement.pug
+++ b/api/pug/base/createElement.pug
@@ -2,51 +2,74 @@ section.section
   header.section__header
     h3.section__h3 createElement(tagName[, attrs, children])
   div.section__content
-    h4.section__h4 Description
     dl.section__dl
-      dt.section__dt Type：
-      dd.section__dd Function
-    dl.section__dl
-      dt.section__dt Default：
-      dd.section__dd null
-    p 可选，当点击导航菜单、文章中的 anchor 图标（#）或者上下滚动按钮会触发滚动，afterScroll() 回调函数会在滚动结束后触发执行。
+      dt.section__dt Category：
+      dd.section__dd Base
+    p createElement() 方法用来创建 DOM 节点，并添加属性和子节点。
     h4.section__h4 Parameters
-    h5.section__h4 target
+    h5.section__h4 tagName
     dl.section__dl
       dt.section__dt Type：
       dd.section__dd String
-    p afterScroll() 回调函数有一个参数 target，返回的是当前点击的 DOM 元素的名称：
+    p （必须）标签名称。
+    h5.section__h4 attrs
+    dl.section__dl
+      dt.section__dt Type：
+      dd.section__dd Object|Array|HTMLElement|DocumentFragment|String
     ul
-      li 'anchor'：表示点击的是 anchor 图标，即文章中标题前的 “#” 图标，此时的 this 上下文指向 outline.anchors；
-      li 'chapter'：表示点击的是导航菜单的链接，此时的 this 上下文指向 outline.chapters；
-      li 'up'：表示点击的是工具栏的向上按钮，此时的 this 上下文指向 outline.toolbar；
-      li 'down'：表示点击的是工具栏的向下按钮，此时的 this 上下文指向 outline.toolbar；
-    p 注意：因为配置 afterScroll 回调函数会因为 4 个不同的 DOM 触发，所以需要根据 target 返回的值和此时的 this 指向判断处理。
+      li Object：要添加的 HTML 属性/值对象；
+      li Array：添加到创建的 DOM 元素中的多个子元素的数组；
+      li HTMLElement：添加到创建的 DOM 元素中的（单个）子元素；
+      li DocumentFragment：添加到创建的 DOM 元素中的文档碎片；
+      li String：添加到创建的 DOM 元素中的文本（会作为文本节点）；
+    p （可选）给创建的 DOM 元素添加的 HTML 属性/值对象或者子元素。
+    h5.section__h4 children
+    dl.section__dl
+      dt.section__dt Type：
+      dd.section__dd Array|HTMLElement|DocumentFragment|String
+    ul
+      li Array：添加到创建的 DOM 元素中的多个子元素的数组；
+      li HTMLElement：添加到创建的 DOM 元素中的（单个）子元素；
+      li DocumentFragment：添加到创建的 DOM 元素中的文档碎片；
+      li String：添加到创建的 DOM 元素中的文本（会作为文本节点）；
+    p （可选）给创建的 DOM 元素添加的子元素。
+    h5.section__h4 Returns
+    dl.section__dl
+      dt.section__dt Type：
+      dd.section__dd HTMLElement
+    p 返回创建的 DOM 元素。
     pre.section__pre
-      code.section__code.
-        const defaults = Outline.DEFAULTS
-        let outline
+      code.section__.
+        // 引入 DOM 模块（中的所有工具方法）
+        import DOM from '@yaohaixiao/dom.js/dom
+        // 引用 createElement 单个方法
+        import createElement from '@yaohaixiao/dom.js/createElement'
 
-        defaults.position = 'fixed'
-        defaults.parentElement = '#aside'
-        defaults.stickyHeight = 86
-        defaults.homepage = './index.html'
-        defaults.afterScroll = function(target) {
-          // 当然，如果你希望无论是点击什么都执行，就不需要判断了
-          // 直接些通用的滚动结束的逻辑即可
-          switch(target){
-            case 'anchor':
-              // 针对点击 # 的处理逻辑
-              break
-            case 'chapter':
-              // 针对点击导航菜单的处理逻辑
-              break
-            case 'up':
-              // 针对点击向上滚动按钮的处理逻辑
-              break
-            case 'down':
-              // 针对点击向下滚动按钮的处理逻辑
-              break
-          }
-        }
-        outline = new Outline(Outline.DEFAULTS)
+        // 创建 LI 节点，并且添加一个 TextNode 类型的子元素
+        const $home = DOM.createElement('li', {
+          id: 'home',
+          className: 'item active'
+        }, DOM.text('Home'))
+
+        // 创建 LI 节点，设置 class 属性并且添加 Blog 字符串（添加一个 TextNode 类型的子元素）
+        const $blog = createElement('li', {
+          className: 'item'
+        }, 'Blog')
+
+        // 创建 LI 节点，并且添加 About 字符串（添加一个 TextNode 类型的子元素）
+        const $about = createElement('li', 'About')
+
+        addClass($about, 'item')
+
+        // 创建 UL 节点，并且添加多个 LI 子节点
+        const $list = createElement('ul', {
+          id: 'list',
+          className: 'list'
+        ), [
+          $home,
+          $blog,
+          $about
+        ])
+
+        document.body.appendChild($list)
+
