--- a/api/pug/base/section.pug
+++ b/api/pug/base/section.pug
@@ -14,10 +14,11 @@ section.section
   include ./getOffsetParent
   include ./getScrollParent
   include ./index
-  include ./isAncestor
+  include ./isInBounding
   include ./isInViewport
   include ./isMatched
   include ./matches
   include ./parent
   include ./children
+  include ./resolveTextNode
 
