--- a/api/pug/base/getEl.pug
+++ b/api/pug/base/getEl.pug
@@ -1,24 +1,51 @@
 section.section
   header.section__header
-    h3.section__h3 getEl(selector, el, multiple)
+    h3.section__h3 getEl(selector[, el, multiple])
   div.section__content
-    h4.section__h4 Description
+    dl.section__dl
+      dt.section__dt Category：
+      dd.section__dd Base
+    p 返回与指定的选择器组匹配的文档中的 DOM 元素或者 DOM 元素列表。
+    h4.section__h4 Parameters
+    h5.section__h4 selector
     dl.section__dl
       dt.section__dt Type：
-      dd.section__dd String|HTMLElement
+      dd.section__dd String
+    p （必须）选择器字符串。
+    h5.section__h4 el
     dl.section__dl
-      dt.section__dt Default：
-      dd.section__dd 'html,body'
-    ul
-      li String： 选择器字符串，默认值：html,body（即 window 窗口）;
-      li HTMLElement： DOM 元素;
-    p 可选，负责文章区域滚动的元素：
+      dt.section__dt Type：
+      dd.section__dd HTMLElement|Boolean
+    p （可选）el 参数指定要检索的 DOM 元素范围（不指定则默认为 document）或者是否返回 DOM 元素列表。
+    h5.section__h4 multiple
+    dl.section__dl
+      dt.section__dt Type：
+      dd.section__dd Boolean
+    p （可选）multiple 参数指定是否返回 DOM 元素列表，默认值：false。为 true 时，则返回 DOM 元素列表（获取所有于原则器匹配的 DOM 元素）。
+    h5.section__h4 Returns
+    dl.section__dl
+      dt.section__dt Type：
+      dd.section__dd HTMLElement|NodeList
+    p 返回检索匹配的 DOM 元素或者 DOM 元素列表。
     pre.section__pre
       code.section__.
-        // 默认是当前窗口滚动
-        new Outline(Outline.DEFAULTS)
+        &lt;ul id="list" class="list"&gt;
+            &lt;li id="home" class="item active"&gt;Home&lt;/li&gt;
+            &lt;li class="item"&gt;Blog&lt;/li&gt;
+            &lt;li class="item"&gt;Projects&lt;/li&gt;
+            &lt;li class="item"&gt;About&lt;/li&gt;
+        &lt;/ul&gt;
 
-        // 指定滚动区域是 #main 元素
-        new Outline({
-          scrollElement: '#main'
-        })
+        // 引入 DOM 模块（中的所有工具方法）
+        import DOM from '@yaohaixiao/dom.js/dom
+        // 引用 getEl 单个方法
+        import getEl from '@yaohaixiao/dom.js/getEl'
+
+        const $list = DOM.getEl('#list')
+
+        // 获取多个
+        const $items = getEl('.item', true)
+        const $items = getEl('.item', $list, true)
+
+        // 仅匹配第一个
+        const $items = getEl('.item', $list)
