--- a/api/pug/base/isInViewport.pug
+++ b/api/pug/base/isInViewport.pug
@@ -2,23 +2,44 @@ section.section
   header.section__header
     h3.section__h3 isInViewport(el)
   div.section__content
-    h4.section__h4 Description
+    dl.section__dl
+      dt.section__dt Category：
+      dd.section__dd Base
+    p isInViewport() 方法用来检测某个 DOM 节点的位置是否在当前视口（当前窗口可见区域）之内。
+    h4.section__h4 Parameters
+    h5.section__h4 el
     dl.section__dl
       dt.section__dt Type：
-      dd.section__dd String|HTMLElement
+      dd.section__dd HTMLElement
+    p （必须）el 参数指定 DOM 元素。
+    h5.section__h4 Returns
     dl.section__dl
-      dt.section__dt Default：
-      dd.section__dd 'html,body'
-    ul
-      li String： 选择器字符串，默认值：html,body（即 window 窗口）;
-      li HTMLElement： DOM 元素;
-    p 可选，负责文章区域滚动的元素：
+      dt.section__dt Type：
+      dd.section__dd Boolean
+    p el 在当前视口内，返回 true，否则返回 false。
     pre.section__pre
       code.section__.
-        // 默认是当前窗口滚动
-        new Outline(Outline.DEFAULTS)
+        &lt;style&gt;
+        .blog{
+          position: fixed;
+          left: 99999;
+        }
+        &lt;/style&gt;
 
-        // 指定滚动区域是 #main 元素
-        new Outline({
-          scrollElement: '#main'
-        })
+        &lt;ul id="list" class="list"&gt;
+            &lt;li id="home" class="item active"&gt;Home&lt;/li&gt;
+            &lt;li class="item blog"&gt;Blog&lt;/li&gt;
+            &lt;li class="item project"&gt;Projects&lt;/li&gt;
+            &lt;li class="item"&gt;About&lt;/li&gt;
+        &lt;/ul&gt;
+
+        // 引入 DOM 模块（中的所有工具方法）
+        import DOM from '@yaohaixiao/dom.js/dom
+        // 引用 isInViewport 单个方法
+        import isInViewport from '@yaohaixiao/dom.js/isInViewport'
+
+        const $list = DOM.byId('#list')
+        const $blog = DOM.getEl('.blog')
+
+        DOM.isInViewport($list) // -> true
+        isInViewport($blog) // -> false
