--- a/api/pug/insertion/section.pug
+++ b/api/pug/insertion/section.pug
@@ -5,8 +5,10 @@ section.section
     p dom.js 提供以下方法用于处理插入新的 DOM 元素。
   include ./insertAfter
   include ./insertBefore
-  include ./insertHTMLAfter
-  include ./insertHTMLBefore
+  include ./insertHTMLAfterBegin
+  include ./insertHTMLAfterEnd
+  include ./insertHTMLBeforeBegin
+  include ./insertHTMLBeforeEnd
   include ./after
   include ./before
   include ./append
