--- a/api/pug/insertion/insertAfter.pug
+++ b/api/pug/insertion/insertAfter.pug
@@ -2,26 +2,48 @@ section.section
   header.section__header
     h3.section__h3 insertAfter(el, reference)
   div.section__content
-    h4.section__h4 Description
+    dl.section__dl
+      dt.section__dt Category：
+      dd.section__dd DOM Insertion
+    p insertAfter() 方法用来在参考节点之后插入一个拥有指定父节点的子节点。如果给定的子节点是对文档中现有节点的引用，insertAfter() 会将其从当前位置移动到新位置（在将节点附加到其他节点之前，不需要从其父节点删除该节点）。
+    h4.section__h4 Parameters
+    h5.section__h4 el
     dl.section__dl
       dt.section__dt Type：
-      dd.section__dd String|HTMLElement
+      dd.section__dd HTMLElement
+    p （必须）el 参数指定要插入的 DOM 元素。
+    h5.section__h4 reference
     dl.section__dl
-      dt.section__dt Default：
-      dd.section__dd '#article'
+      dt.section__dt Type：
+      dd.section__dd String
+    p （必须）reference 指定参考节点。
+    h5.section__h4 Returns
     dl.section__dl
-      dt.section__dt String：
-      dd.section__dd 选择器字符串，默认值：html,body（即 window 窗口）;
-    dl.section__dl
-      dt.section__dt HTMLElement：
-      dd.section__dd 'DOM 元素;
-    p 可选，用来指定页面中显示文章正文的 DOM 节点或者选择器字符串。
+      dt.section__dt Type：
+      dd.section__dd Boolean
+    p 函数返回被插入过的子节点；当 newNode 是 DocumentFragment 时，返回空 DocumentFragment。
     pre.section__pre
-      code.section__code.
-        // Default Selector
-        const outline = new Outline(Outline.DEFAULTS)
+      code.section__.
+        &lt;ul id="list" class="list"&gt;
+            &lt;li id="home" class="item active"&gt;Home&lt;/li&gt;
+            &lt;li class="item project"&gt;Projects&lt;/li&gt;
+            &lt;li class="item about"&gt;About&lt;/li&gt;
+        &lt;/ul&gt;
 
-        // Customize Selector
-        const outline = new Outline({
-          articleElement: $('#main')
-        })
+        // 引入 DOM 模块（中的所有工具方法）
+        import DOM from '@yaohaixiao/dom.js/dom
+        // 引用 insertAfter 单个方法
+        import insertAfter from '@yaohaixiao/dom.js/insertAfter'
+
+        const $list = DOM.byId('#list')
+        const $home = DOM.byId('#home')
+        const $about = DOM.getEl('.about')
+        const $blog = DOM.html('&lt;li class="item blog"&gt;Blog&lt;/li&gt;')
+
+        // 插入创建的节点
+        DOM.insertAfter($blog, $home)
+        // -> &lt;li class="item blog"&gt;Blog&lt;/li&gt;
+
+        // 插入引用节点
+        insertAfter($about, $home)
+        // -> &lt;li class="item about"&gt;About&lt;/li&gt;
