--- a/api/pug/size/section.pug
+++ b/api/pug/size/section.pug
@@ -4,13 +4,13 @@ section.section
   div.section__content
     p dom.js 提供以下几个方法用于获取 DOM 元素的尺寸大小。
   include ./getDocumentHeight
-  include ./getDocumentHeight
+  include ./getDocumentWidth
   include ./getViewportHeight
   include ./getViewportWidth
-  include ./getElementSizes
   include ./innerHeight
   include ./innerWidth
   include ./outerHeight
   include ./outerWidth
   include ./height
   include ./width
+  include ./sizes
