--- a/api/pug/sibling/section.pug
+++ b/api/pug/sibling/section.pug
@@ -2,7 +2,7 @@ section.section
   header.section__header
     h2.section__title Selecting Siblings
   div.section__content
-    p dom.js 提供以下几个方法用于获取邻居 DOM 元素。
+    p dom.js 提供以下几个方法用于获取指定 DOM 元素的邻居节点。
   include ./getNextSibling
   include ./getPrevSibling
   include ./getNextSiblings
