--- a/api/pug/size/sizes.pug
+++ b/api/pug/size/sizes.pug
@@ -76,7 +76,7 @@ section.section
         &lt;/style&gt;
 
         &lt;ul id="list" class="list"&gt;
-            &lt;li class="item active"&gt;Home&lt;/li&gt;
+            &lt;li id="home" class="item active"&gt;Home&lt;/li&gt;
             &lt;li class="item"&gt;Blog&lt;/li&gt;
             &lt;li class="item"&gt;Projects&lt;/li&gt;
             &lt;li class="item"&gt;About&lt;/li&gt;
