--- a/api/pug/sibling/getNextSiblingBy.pug
+++ b/api/pug/sibling/getNextSiblingBy.pug
@@ -2,17 +2,44 @@ section.section
   header.section__header
     h3.section__h3 getNextSiblingBy(el, filter)
   div.section__content
-    h4.section__h4 Description
+    dl.section__dl
+      dt.section__dt Category：
+      dd.section__dd Selecting Siblings
+    p getNextSiblingBy() 方法用来通过过滤器获取 DOM 元素匹配的后面的邻居元素节点。
+    h4.section__h4 Parameters
+    h5.section__h4 el
     dl.section__dl
       dt.section__dt Type：
-      dd.section__dd Object
-    p 存储的是 Outline 对象当前使用中的配置选项：
-    p 说明：建议使用 attrs(prop) 方法来获取属性，避免直接调用属性。
+      dd.section__dd String
+    p （必须）el 参数指定 DOM 元素。
+    h5.section__h4 filter
+    dl.section__dl
+      dt.section__dt Type：
+      dd.section__dd Function|String
+    p （必须）filter 参数指定用于过滤的回调函数或者选择器字符串。
+    h4.section__h4 Returns
+    dl.section__dl
+      dt.section__dt Type：
+      dd.section__dd HTMLElement
+    p 返回 DOM 元素的下一个邻居元素节点。
     pre.section__pre
       code.section__code.
-        // 设置默认配置项
-        const outline = new Outline(Outline.DEFAULTS)
+        &lt;ul id="list" class="list"&gt;
+            &lt;li id="home" class="item active"&gt;Home&lt;/li&gt;
+            &lt;li class="item blog"&gt;Blog&lt;/li&gt;
+            &lt;li class="item"&gt;Projects&lt;/li&gt;
+            &lt;li class="item about"&gt;About&lt;/li&gt;
+        &lt;/ul&gt;
 
-        // 查看全部配置信息
-        outline.attrs
+        // 引入 DOM 模块（中的所有工具方法）
+        import DOM from '@yaohaixiao/dom.js/dom
+        // 引用 getNextSiblingBy 单个方法
+        import getNextSiblingBy from '@yaohaixiao/dom.js/getNextSiblingBy'
 
+        const $home = DOM.byId('#home')
+
+        DOM.getNextSiblingBy($home, '.item.blog') // -> &lt;li class="item blog"&gt;Blog&lt;/li&gt;
+        getNextSiblingBy($home, (el) => {
+          return DOM.hasClass(el, 'about')
+        })
+        // -> &lt;li class="item about"&gt;About&lt;/li&gt;
