--- a/api/pug/sibling/getPrevSiblingBy.pug
+++ b/api/pug/sibling/getPrevSiblingBy.pug
@@ -2,98 +2,44 @@ section.section
   header.section__header
     h3.section__h3 getPrevSiblingBy(el, filter)
   div.section__content
-    h4.section__h4 Description
+    dl.section__dl
+      dt.section__dt Category：
+      dd.section__dd Selecting Siblings
+    p getPrevSiblingBy() 方法用来通过过滤器获取 DOM 元素匹配的前面的邻居元素节点。
+    h4.section__h4 Parameters
+    h5.section__h4 el
     dl.section__dl
       dt.section__dt Type：
-      dd.section__dd Object
-    p Drawer 模块：独立的侧滑窗口模块。
+      dd.section__dd String
+    p （必须）el 参数指定 DOM 元素。
+    h5.section__h4 filter
+    dl.section__dl
+      dt.section__dt Type：
+      dd.section__dd Function|String
+    p （必须）filter 参数指定用于过滤的回调函数或者选择器字符串。
+    h4.section__h4 Returns
+    dl.section__dl
+      dt.section__dt Type：
+      dd.section__dd HTMLElement
+    p 返回 DOM 元素的下一个邻居元素节点。
     pre.section__pre
       code.section__code.
-        // 仅展示 API 中对外公开的方法和属性
-        class Drawer extends Base {
-          constructor(options) {
-            super()
+        &lt;ul id="list" class="list"&gt;
+            &lt;li id="home" class="item active"&gt;Home&lt;/li&gt;
+            &lt;li class="item blog"&gt;Blog&lt;/li&gt;
+            &lt;li class="item"&gt;Projects&lt;/li&gt;
+            &lt;li id="about" class="item about"&gt;About&lt;/li&gt;
+        &lt;/ul&gt;
 
-            this.attrs = Drawer.DEFAULTS
-            this.title = ''
-            this.closed = true
-            this.$el = null
-            this.$modal = null
-            this.$header = null
-            this.$title = null
-            this.$close = null
-            this.$main = null
-            this.$footer = null
-            this.$overlay = null
-            this.zIndex = 0
+        // 引入 DOM 模块（中的所有工具方法）
+        import DOM from '@yaohaixiao/dom.js/dom
+        // 引用 getPrevSiblingBy 单个方法
+        import getPrevSiblingBy from '@yaohaixiao/dom.js/getPrevSiblingBy'
 
-            // 省略其它逻辑...
-          }
+        const $about = DOM.byId('#home')
 
-          isClosed() {
-              return this.closed
-          }
-
-          setTitle() {
-            this.attrs('title', title)
-            this.title = title
-            this.$title.innerHTML = title
-
-            return this
-          }
-
-          attrs(prop, value) {
-            // 省略其它逻辑...
-            return this
-          }
-
-          render() {
-            // 省略其它逻辑...
-            return this
-          }
-
-          open() {
-            // 省略其它逻辑...
-            return this
-          }
-
-          close() {
-            // 省略其它逻辑...
-            return this
-          }
-
-          toggle() {
-            // 省略其它逻辑...
-            return this
-          }
-
-          destroy() {
-            this.removeListeners()
-            // 省略其它逻辑...
-            return this
-          }
-
-          reload(options) {
-            this.destroy().initialize(this.attrs(options))
-            return this
-          }
-        }
-
-        Drawer.DEFAULTS = {
-           placement: 'rtl',
-           title: '标题',
-           size: 'regular',
-           hasClose: true,
-           hasOverlay: true,
-           hasOffset: false,
-           hasPadding: true,
-           created: null,
-           mounted: null,
-           afterClosed: null,
-           afterOpened: null,
-           afterScroll: null,
-           beforeDestroy: null,
-           afterDestroy: null
-        }
-
-        export default Drawer
+        DOM.getPrevSiblingBy($about, '.item.about') // -> &lt;li id="home" class="item active"&gt;Home&lt;/li&gt;
+        getPrevSiblingBy($about, (el) => {
+          return DOM.hasClass(el, 'blog')
+        })
+        // -> &lt;li class="item blog"&gt;Blog&lt;/li&gt;
