--- a/api/pug/sibling/next.pug
+++ b/api/pug/sibling/next.pug
@@ -2,19 +2,40 @@ section.section
   header.section__header
     h3.section__h3 next(el)
   div.section__content
-    h4.section__h4 Description
+    dl.section__dl
+      dt.section__dt Category：
+      dd.section__dd Selecting Siblings
+    dl.section__dl
+      dt.section__dt Alias：
+      dd.section__dd getNextSibling
+    p next() 方法用来获取 DOM 元素的下一个邻居元素节点。
+    h4.section__h4 Parameters
+    h5.section__h4 el
     dl.section__dl
       dt.section__dt Type：
       dd.section__dd String
+    p （必须）el 参数指定 DOM 元素。
+    h4.section__h4 Returns
     dl.section__dl
-      dt.section__dt Default：
-      dd.section__dd ''
-    p 可选，针对 API 文档类的文章页面，指定项目 git 仓库 issues 页面地址：
+      dt.section__dt Type：
+      dd.section__dd HTMLElement
+    p 返回 DOM 元素的下一个邻居元素节点。
     pre.section__pre
       code.section__code.
-        const outline = new Outline(Outline.DEFAULTS)
+        &lt;ul id="list" class="list"&gt;
+            &lt;li id="home" class="item active"&gt;Home&lt;/li&gt;
+            &lt;li class="item blog"&gt;Blog&lt;/li&gt;
+            &lt;li class="item"&gt;Projects&lt;/li&gt;
+            &lt;li class="item"&gt;About&lt;/li&gt;
+        &lt;/ul&gt;
 
-        // 侧边栏的 Toolbar 会多出一个 issues 图标的按钮
-        outline.reload({
-          issues: 'https://github.com/yaohaixiao/outline.js/issues'
-        })
+        // 引入 DOM 模块（中的所有工具方法）
+        import DOM from '@yaohaixiao/dom.js/dom
+        // 引用 next 单个方法
+        import next from '@yaohaixiao/dom.js/next'
+
+        const $list = DOM.byId('#list')
+        const $home = DOM.byId('#home')
+
+        DOM.next($list) // -> null
+        next($home) // -> &lt;li class="item"&gt;Blog&lt;/li&gt;
