--- a/api/pug/sibling/prev.pug
+++ b/api/pug/sibling/prev.pug
@@ -2,25 +2,42 @@ section.section
   header.section__header
     h3.section__h3 prev(el)
   div.section__content
-    h4.section__h4 Description
+    dl.section__dl
+      dt.section__dt Category：
+      dd.section__dd Selecting Siblings
+    dl.section__dl
+      dt.section__dt Alias：
+      dd.section__dd getPrevSibling
+    p prev() 方法用来获取 DOM 元素的前一个邻居元素节点。
+    h4.section__h4 Parameters
+    h5.section__h4 el
     dl.section__dl
       dt.section__dt Type：
       dd.section__dd String
+    p （必须）el 参数指定 DOM 元素。
+    h4.section__h4 Returns
     dl.section__dl
-      dt.section__dt Default：
-      dd.section__dd 'rtl'
-    p 可选，设置 position: relative 时，placement 定义侧滑菜单和 toolbar 导航位置：
-    ul
-      li rtl - 菜单位置在窗口右侧，滑动动画为：right to left（默认值）；
-      li ltr - 菜单位置在窗口左侧，滑动动画为：left to right；
-      li ttb - 菜单位置在窗口上方，滑动动画为：top to bottom；
-      li btt - 菜单位置在窗口下方，滑动动画为：bottom to top；
+      dt.section__dt Type：
+      dd.section__dd HTMLElement
+    p 返回 DOM 元素的前一个邻居元素节点。
     pre.section__pre
-      code.section__.
-        // 默认是在窗口右侧显示侧滑导航菜单
-        new Outline(Outline.DEFAULTS)
+      code.section__code.
+        &lt;ul id="list" class="list"&gt;
+            &lt;li id="home" class="item active"&gt;Home&lt;/li&gt;
+            &lt;li class="item blog"&gt;Blog&lt;/li&gt;
+            &lt;li class="item"&gt;Projects&lt;/li&gt;
+            &lt;li class="item"&gt;About&lt;/li&gt;
+        &lt;/ul&gt;
 
-        // 调整为在窗口右侧显示侧滑导航菜单
-        new Outline({
-          placement: 'ltr'
-        })
+        // 引入 DOM 模块（中的所有工具方法）
+        import DOM from '@yaohaixiao/dom.js/dom
+        // 引用 prev 单个方法
+        import prev from '@yaohaixiao/dom.js/prev'
+
+        const $list = DOM.byId('#list')
+        const $home = DOM.byId('#home')
+        const $blog = DOM.getEl('.blog')
+
+        DOM.prev($list) // -> null
+        prev($home) // -> null
+        prev($blog) // -> &lt;li id="home" class="item active"&gt;Home&lt;/li&gt;
