--- a/api/pug/sibling/prevAll.pug
+++ b/api/pug/sibling/prevAll.pug
@@ -2,29 +2,45 @@ section.section
   header.section__header
     h3.section__h3 prevAll(el)
   div.section__content
-    h4.section__h4 Description
+    dl.section__dl
+      dt.section__dt Category：
+      dd.section__dd Selecting Siblings
+    dl.section__dl
+      dt.section__dt Alias：
+      dd.section__dd getPrevSiblings
+    p prevAll() 方法用来获取 DOM 元素的前面所有邻居元素节点。
+    h4.section__h4 Parameters
+    h5.section__h4 el
     dl.section__dl
       dt.section__dt Type：
       dd.section__dd String
+    p （必须）el 参数指定 DOM 元素。
+    h4.section__h4 Returns
     dl.section__dl
-      dt.section__dt Default：
-      dd.section__dd 'relative'
-    p 可选，用来指定文章导读导航菜单的显示位置：
-    ul
-      li relative: （默认值）创建独立的侧滑菜单；
-      li sticky: 导航菜单将以 sticky 模式布局（需要确保菜单插入位置(DOM 节点)支持 sticky 模式布局）；
-      li fixed: 导航菜单将模拟 sticky 布局，起初是普通定位，会自动监听滚动位置，但滚动到导航菜单顶部时，以 fixed 模式布局，模拟 sticky 布局效果；
-    p 当设置为 sticky 和 fixed 布局时，需要设置 parentElement。
-    p 注意：2.0.0 暂时不支持之前版本那种 inside 模式，不会自动在文章开始位置插入 chapters 导航菜单
+      dt.section__dt Type：
+      dd.section__dd HTMLElement
+    p 返回 DOM 元素的前面所有邻居元素节点的数组，如果没有则返回空数组。
     pre.section__pre
       code.section__code.
-        // 默认生成独立的侧滑弹窗导航菜单
-        new Outline(Outline.DEFAULTS)
+        &lt;ul id="list" class="list"&gt;
+            &lt;li id="home" class="item active"&gt;Home&lt;/li&gt;
+            &lt;li class="item blog"&gt;Blog&lt;/li&gt;
+            &lt;li class="item"&gt;Projects&lt;/li&gt;
+            &lt;li class="item about"&gt;About&lt;/li&gt;
+        &lt;/ul&gt;
 
-        // 在页面内部插入导航菜单
-        new Outline({
-          // 在（文章的）侧边栏显示导航菜单
-          parentElement: '#aside',
-          // 或者 sticky 定位
-          position: 'fixed'
-        })
+        // 引入 DOM 模块（中的所有工具方法）
+        import DOM from '@yaohaixiao/dom.js/dom
+        // 引用 prevAll 单个方法
+        import prevAll from '@yaohaixiao/dom.js/prevAll'
+
+        const $list = DOM.byId('#list')
+        const $about = DOM.getEl('.about')
+
+        DOM.prevAll($list) // ->[]
+        prevAll($about)
+        // -> [
+        //   &lt;li class="item"&gt;Projects&lt;/li&gt;,
+        //   &lt;li class="item blog"&gt;Blog&lt;/li&gt;,
+        //   &lt;li id="home" class="item active"&gt;Home&lt;/li&gt;
+        // ]
